# GeneratorMonitoring

./: .gitignore  CMakeLists.txt  README.md  server.py
src/app/: main.c
src/boards/: board.h
src/boards/bluepill/: board.c
src/drivers/: MotionTracking.h  generator.h  rht.h  rpm.c  rpm.h
src/drivers/generator/: generator.c
src/drivers/htu21/: rht.c
src/drivers/mpu6050/: mpu6050.c
src/mcu/stm32f103c8/: adc.c  clock.c  gpio.c  i2c.c  stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  timer.c  usart.c
src/mcu/stm32f103c8/device/: jlink.jflash
src/peripherals/: adc.h  clock.h  gpio.h  i2c.h  timer.h  usart.h
src/shared/: config.h  debug.h
src/shared/esp/: esp.c  esp.h
src/shared/fifo/: fifo.c  fifo.h
src/shared/sampling/: sampling.c  sampling.h
src/shared/senseTimer/: senseTimer.c  senseTimer.h
src/shared/string/: string.c  string.h
